# 8th-Sem-RPI5-Code

./: .env.local  main.py  pyproject.toml
Cookbook/: cam.py  motor.py
src/: robot.py
src/agent/: agent.py  functions.py  prompts.py
