[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-servokit>=1.3.22",
    "adafruit-circuitpython-pca9685",
    "adafruit-circuitpython-busdevice",
    "fastapi>=0.135.1",
    "lgpio>=0.2.2.0",
    "opencv-python>=4.13.0.92",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "pydobot>=1.3.2",
]
