[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "opencv-python>=4.13.0.92",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "pydobot>=1.3.2",
    "livekit-agents[google]~=1.4",
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-agents[images]",
    "requests",
    "google.genai"

]
